--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,18 @@
 
 body {
  background-color: #EFEDD5;
+ font-family: 'Roboto', sans-serif;
 }
 
 ul {
  list-style: none;
+}
+
+/* Fonts */
+h1, h2, h3, .price {
+ font-family: 'Roboto Serif', serif;
+ text-transform: uppercase;
+ color: #202C2A;
 }
 
 header {
@@ -24,10 +32,18 @@ section {
 
 header h1 {
  margin-bottom: 4px;
+ font-size: 28px;
+ line-height: 33px;
 }
 
 header h1 span {
  color: #995000;
+}
+
+header p {
+ font-size: 14px;
+ line-height: 16px;
+ color: rgba(0, 0, 0, 0.7);
 }
 
 section {
@@ -40,6 +56,7 @@ section h2 {
  text-align: center;
 
  margin-bottom: 24px;
+ font-size: 18px;
 }
 
 ul li {
@@ -53,4 +70,12 @@ li .detail {
 
 .details h3 {
  margin-bottom: 8px;
+ font-size: 16px;
+ line-height: 19px;
+}
+
+.details p {
+ color: rgba(0, 0, 0, 0.6);
+ font-size: 14px;
+ line-height: 21px;
 }
