--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
- background-color: #EFEDD5;
+ background-color: #F2D1B3;
  font-family: 'Roboto', sans-serif;
 }
 
@@ -19,13 +19,15 @@ h1, h2, h3, .price {
  color: #202C2A;
 }
 
-header {
+header,
+footer {
  padding: 32px 0;
  text-align: center;
 }
 
 header,
-section {
+section,
+footer {
  max-width: 300px;
  margin: 0 auto;
 }
@@ -37,13 +39,13 @@ header h1 {
 }
 
 header h1 span {
- color: #995000;
+ color: #F25244;
 }
 
 header p {
  font-size: 14px;
  line-height: 16px;
- color: rgba(0, 0, 0, 0.7);
+ color: rgba(211, 33, 33, 0.7);
 }
 
 section {
@@ -51,7 +53,7 @@ section {
 }
 
 section h2 {
- background-color: #FED7AA;
+ background-color: #F25244;
  padding: 8px 16px;
  text-align: center;
 
@@ -79,3 +81,18 @@ li .detail {
  font-size: 14px;
  line-height: 21px;
 }
+
+footer {
+ font-weight: 500;
+ font-size: 12px;
+ opacity: 0.7;
+ transition: opacity 400ms;
+}
+   
+   footer:hover {
+    opacity: 1;
+ }
+   
+   footer a {
+    color: var(--text-color);
+ }
